--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -445,11 +445,14 @@ EstimateScreen As screen:
                         Font: =Font.Arial
                         Format: =TextFormat.Number
                         Height: =50
-                        HintText: ="Estimated hours(total man hours)"
+                        HintText: =If(VarEstimateHours,"","Estimated hours(total man hours) *")
                         HoverBorderColor: =RGBA(202, 202, 202, 1)
                         HoverFill: =RGBA(0, 0, 0, 0)
                         MaxLength: =3
-                        OnChange: =Set(VarEstimateHoursSummary,IntxtEstimatedHours.Text);Set(VarEstimateHours,true)
+                        OnChange: |-
+                            =Set(VarEstimateHoursSummary,IntxtEstimatedHours.Text);
+                            //Set(VarEstimateHours,true)
+                        OnSelect: =Set(VarEstimateHours,true)
                         PaddingLeft: =5
                         RadiusBottomLeft: =0
                         RadiusBottomRight: =0
@@ -528,12 +531,15 @@ EstimateScreen As screen:
                         DisplayMode: =Parent.DisplayMode
                         Font: =Font.Arial
                         Height: =80
-                        HintText: ="Material, part numbers, and other notes"
+                        HintText: =If(VarNotes,"","Material, part numbers, and other notes *")
                         HoverBorderColor: =RGBA(202, 202, 202, 1)
                         HoverFill: =RGBA(0, 0, 0, 0)
                         MaxLength: =Parent.MaxLength
                         Mode: =TextMode.MultiLine
-                        OnChange: =Set(VarNotesSummary,IntxtMaterial.Text);Set(VarNotes,true)
+                        OnChange: |-
+                            =Set(VarNotesSummary,IntxtMaterial.Text);
+                            //Set(VarNotes,true)
+                        OnSelect: =Set(VarNotes,true)
                         PaddingLeft: =5
                         RadiusBottomLeft: =0
                         RadiusBottomRight: =0
@@ -696,7 +702,8 @@ EstimateScreen As screen:
                         OnCheck: |-
                             =Set(VarAdditionExpenseSummary,CboxAdditionalExpensesRequired.Value);
                             Set(VarAdditionExpense,true);Reset(IntxtTotalEstimatedHoursofTravel);
-                        OnUncheck: |-
+                            Set(VarTotalEstimatesExpense,false);
+                        OnUncheck: |
                             =Set(VarAdditionExpenseSummary,CboxAdditionalExpensesRequired.Value);
                             Set(VarAdditionExpense,false);Reset(IntxtTotalEstimatedExpense);
                         PressedBorderColor: =
@@ -704,6 +711,104 @@ EstimateScreen As screen:
                         Text: ="Additional expenses required"
                         Width: =Parent.Width-50
                         X: =30
+                        ZIndex: =5
+
+                TotalEstimatedExpenseES As typedDataCard.textualEditCard:
+                    BorderColor: =RGBA(202, 202, 202, 1)
+                    BorderStyle: =BorderStyle.Solid
+                    DataField: ="shlrf_totalestimatedexpense"
+                    Default: =ThisItem.TotalEstimatedExpense
+                    DisplayMode: =Parent.DisplayMode
+                    DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_totalestimatedexpense")
+                    Fill: =RGBA(255, 255, 255, 1)
+                    Height: =50
+                    MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, "shlrf_totalestimatedexpense")
+                    Required: =false
+                    Update: =IntxtTotalEstimatedExpense.Text
+                    Visible: =VarAdditionExpense
+                    Width: =Parent.Width
+                    X: =0
+                    Y: =4
+                    ZIndex: =1
+
+                    borderCustomerContactES_1 As rectangle:
+                        BorderColor: =RGBA(116, 116, 116, 1)
+                        BorderThickness: =1
+                        Fill: =RGBA(237, 237, 237, 1)
+                        Height: =Parent.Height
+                        Width: =Parent.Width-60
+                        X: =30
+                        ZIndex: =1
+
+                    lblTotalEstimatedExpense As label:
+                        AutoHeight: =true
+                        Color: =RGBA(0, 0, 0, 1)
+                        DisabledColor: =RGBA(0, 0, 0, 1)
+                        Font: =Font.Arial
+                        Height: =34
+                        Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
+                        Text: ="Total estimated expense *"
+                        Visible: =VarTotalEstimatesExpense
+                        Width: =Parent.Width - 120
+                        Wrap: =false
+                        X: =60
+                        Y: =10
+                        ZIndex: =2
+
+                    IntxtTotalEstimatedExpense As text:
+                        BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                        Default: =VarTotalEstimateExpenseSummary
+                        DelayOutput: =true
+                        DisabledColor: =RGBA(0, 0, 0, 1)
+                        DisplayMode: =Parent.DisplayMode
+                        Font: =Font.Arial
+                        Format: =TextFormat.Number
+                        HintText: =If(VarTotalEstimatesExpense,"","Total estimated expense *")
+                        HoverBorderColor: =RGBA(149, 149, 149, 1)
+                        HoverFill: =RGBA(255, 255, 255, 1)
+                        MaxLength: =Parent.MaxLength
+                        OnChange: =Set(VarTotalEstimateExpenseSummary,IntxtTotalEstimatedExpense.Text);
+                        OnSelect: =Set(VarTotalEstimatesExpense,true)
+                        PaddingLeft: =5
+                        RadiusBottomLeft: =0
+                        RadiusBottomRight: =0
+                        RadiusTopLeft: =0
+                        RadiusTopRight: =0
+                        Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
+                        Tooltip: ="Total estimated expense"
+                        Width: =Parent.Width - 120
+                        X: =60
+                        Y: =lblTotalEstimatedExpense.Y + lblTotalEstimatedExpense.Height + 5
+                        ZIndex: =3
+
+                    ErrorMessagelblTotalEstimatedExpense As label:
+                        AutoHeight: =true
+                        Height: =10
+                        Live: =Live.Assertive
+                        PaddingBottom: =0
+                        PaddingLeft: =0
+                        PaddingRight: =0
+                        PaddingTop: =0
+                        Text: =Parent.Error
+                        Visible: =Parent.DisplayMode=DisplayMode.Edit
+                        Width: =Parent.Width - 60
+                        X: =30
+                        Y: =IntxtTotalEstimatedExpense.Y + IntxtTotalEstimatedExpense.Height
+                        ZIndex: =4
+
+                    StarVisiblelblTotalEstimatedExpense As label:
+                        Align: =Align.Center
+                        Color: =RGBA(255, 0, 0, 1)
+                        Font: =Font.Arial
+                        Height: =lblTotalEstimatedExpense.Height
+                        Size: =21
+                        Text: ="*"
+                        VerticalAlign: =VerticalAlign.Top
+                        Visible: =false
+                        Width: =30
+                        Wrap: =false
+                        X: =30
+                        Y: =lblTotalEstimatedExpense.Y
                         ZIndex: =5
 
                 TravelRequired As typedDataCard.comboBoxOptionSetSingleEditCard:
@@ -768,102 +873,6 @@ EstimateScreen As screen:
                         Text: ="Travel required"
                         Width: =Parent.Width-50
                         X: =30
-                        ZIndex: =5
-
-                TotalEstimatedExpenseES As typedDataCard.textualEditCard:
-                    BorderColor: =RGBA(202, 202, 202, 1)
-                    BorderStyle: =BorderStyle.Solid
-                    DataField: ="shlrf_totalestimatedexpense"
-                    Default: =ThisItem.TotalEstimatedExpense
-                    DisplayMode: =Parent.DisplayMode
-                    DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_totalestimatedexpense")
-                    Fill: =RGBA(255, 255, 255, 1)
-                    Height: =50
-                    MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, "shlrf_totalestimatedexpense")
-                    Required: =false
-                    Update: =IntxtTotalEstimatedExpense.Text
-                    Visible: =VarAdditionExpense
-                    Width: =Parent.Width
-                    X: =0
-                    Y: =4
-                    ZIndex: =1
-
-                    borderCustomerContactES_1 As rectangle:
-                        BorderColor: =RGBA(116, 116, 116, 1)
-                        BorderThickness: =1
-                        Fill: =RGBA(237, 237, 237, 1)
-                        Height: =Parent.Height
-                        Width: =Parent.Width-60
-                        X: =30
-                        ZIndex: =1
-
-                    lblTotalEstimatedExpense As label:
-                        AutoHeight: =true
-                        Color: =RGBA(0, 0, 0, 1)
-                        DisabledColor: =RGBA(0, 0, 0, 1)
-                        Font: =Font.Arial
-                        Height: =34
-                        Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                        Text: ="Total estimated expense *"
-                        Width: =Parent.Width - 120
-                        Wrap: =false
-                        X: =60
-                        Y: =10
-                        ZIndex: =2
-
-                    IntxtTotalEstimatedExpense As text:
-                        BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                        Default: =VarTotalEstimateExpenseSummary
-                        DelayOutput: =true
-                        DisabledColor: =RGBA(0, 0, 0, 1)
-                        DisplayMode: =Parent.DisplayMode
-                        Font: =Font.Arial
-                        Format: =TextFormat.Number
-                        HintText: ="Total estimated expense"
-                        HoverBorderColor: =RGBA(149, 149, 149, 1)
-                        HoverFill: =RGBA(255, 255, 255, 1)
-                        MaxLength: =Parent.MaxLength
-                        OnChange: =Set(VarTotalEstimateExpenseSummary,IntxtTotalEstimatedExpense.Text);
-                        PaddingLeft: =5
-                        RadiusBottomLeft: =0
-                        RadiusBottomRight: =0
-                        RadiusTopLeft: =0
-                        RadiusTopRight: =0
-                        Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                        Tooltip: ="Total estimated expense"
-                        Width: =Parent.Width - 120
-                        X: =60
-                        Y: =lblTotalEstimatedExpense.Y + lblTotalEstimatedExpense.Height + 5
-                        ZIndex: =3
-
-                    ErrorMessagelblTotalEstimatedExpense As label:
-                        AutoHeight: =true
-                        Height: =10
-                        Live: =Live.Assertive
-                        PaddingBottom: =0
-                        PaddingLeft: =0
-                        PaddingRight: =0
-                        PaddingTop: =0
-                        Text: =Parent.Error
-                        Visible: =Parent.DisplayMode=DisplayMode.Edit
-                        Width: =Parent.Width - 60
-                        X: =30
-                        Y: =IntxtTotalEstimatedExpense.Y + IntxtTotalEstimatedExpense.Height
-                        ZIndex: =4
-
-                    StarVisiblelblTotalEstimatedExpense As label:
-                        Align: =Align.Center
-                        Color: =RGBA(255, 0, 0, 1)
-                        Font: =Font.Arial
-                        Height: =lblTotalEstimatedExpense.Height
-                        Size: =21
-                        Text: ="*"
-                        VerticalAlign: =VerticalAlign.Top
-                        Visible: =false
-                        Width: =30
-                        Wrap: =false
-                        X: =30
-                        Y: =lblTotalEstimatedExpense.Y
                         ZIndex: =5
 
                 CommunicatedtoCustomer As typedDataCard.comboBoxOptionSetSingleEditCard:
