--- a/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
@@ -272,7 +272,7 @@ LeadListScreen As screen:
                                     )
                                 ),
                                 'Created On',
-                                SortOrder.Descending
+                            Dropdown1.Selected.Value
                             )
                         Layout: =Layout.Vertical
                         LayoutMinHeight: =287
